--- a/WebContent/WEB-INF/zul/query/search/collapsing.zul
+++ b/WebContent/WEB-INF/zul/query/search/collapsing.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,8 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="collapse"
-	use="com.jaeksoft.searchlib.web.controller.query.CollapsingController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('collapse') @init('com.jaeksoft.searchlib.web.controller.query.CollapsingController')">
 	<grid>
 		<columns>
 			<column align="right" width="30%" />
@@ -24,32 +24,41 @@
 		<rows>
 			<row>
 				<label>Mode</label>
-				<listbox mold="select" model="@{collapse.collapseModes}"
-					selectedItem="@{collapse.request.collapseMode}">
-					<listitem self="@{each=mode}" label="@{mode.label}"
-						value="@{mode}" />
+				<listbox mold="select"
+					model="@load(collapse.collapseModes)"
+					selectedItem="@bind(collapse.request.collapseMode)">
+					<template name="model" var="mode">
+						<listitem label="@load(mode.label)"
+							value="@load(mode)" />
+					</template>
 				</listbox>
 			</row>
 			<row>
 				<label>Type</label>
-				<listbox mold="select" model="@{collapse.collapseTypes}"
-					selectedItem="@{collapse.request.collapseType}">
-					<listitem self="@{each=type}" label="@{type.label}"
-						value="@{type}" />
+				<listbox mold="select"
+					model="@load(collapse.collapseTypes)"
+					selectedItem="@bind(collapse.request.collapseType)">
+					<template name="model" var="type">
+						<listitem label="@load(type.label)"
+							value="@load(type)" />
+					</template>
 				</listbox>
 			</row>
 			<row>
 				<label>Field</label>
-				<listbox mold="select" model="@{collapse.indexedFields}"
-					selectedItem="@{collapse.request.collapseField}">
-					<listitem self="@{each=field}" label="@{field}"
-						value="@{field}" />
+				<listbox mold="select"
+					model="@load(collapse.indexedFields)"
+					selectedItem="@bind(collapse.request.collapseField)">
+					<template name="model" var="field">
+						<listitem label="@load(field)"
+							value="@load(field)" />
+					</template>
 				</listbox>
 			</row>
 			<row>
 				<label>Max consecutive documents:</label>
 				<intbox cols="5" constraint="no empty, no negative"
-					value="@{collapse.request.collapseMax}" />
+					value="@bind(collapse.request.collapseMax)" />
 			</row>
 		</rows>
 	</grid>
