--- a/WebContent/WEB-INF/zul/query/resultDocuments.zul
+++ b/WebContent/WEB-INF/zul/query/resultDocuments.zul
@@ -1,5 +1,5 @@
-<window id="resultDocs"
-	use="com.jaeksoft.searchlib.web.controller.query.ResultDocumentsController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('resultDocs') @init('com.jaeksoft.searchlib.web.controller.query.ResultDocumentsController')">
 	<!--
 		License Agreement for OpenSearchServer
 		Copyright (C) 2012 Emmanuel Keller / Jaeksoft
@@ -16,11 +16,11 @@
 		copy of the GNU General Public License along with OpenSearchServer.
 		If not, see <http://www.gnu.org/licenses/>.
 	-->
-	<grid visible="@{resultDocs.resultExists}">
+	<grid visible="@load(resultDocs.resultDocuments)">
 		<auxhead>
 			<auxheader colspan="4" label="Summary" align="right">
 				<button label="XML/HTTP API call" target="_blank"
-					href="@{query.requestApiCall}" />
+					href="@load(query.requestApiCall)" />
 			</auxheader>
 		</auxhead>
 		<columns visible="false">
@@ -32,9 +32,9 @@
 		<rows>
 			<row>
 				<label value="Document(s) found:" />
-				<label value="@{resultMlt.result.numFound}" />
+				<label value="@load(resultDocs.result.numFound)" />
 				<label value="Time elapsed (ms):" />
-				<label value="@{resultMlt.result.timer.duration}" />
+				<label value="@load(resultDocs.result.timer.duration)" />
 			</row>
 		</rows>
 	</grid>
