--- a/WebContent/WEB-INF/zul/query/resultSpellCheck.zul
+++ b/WebContent/WEB-INF/zul/query/resultSpellCheck.zul
@@ -14,69 +14,78 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="resultSpellCheck"
-	use="com.jaeksoft.searchlib.web.controller.query.ResultSpellCheckController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('resultSpellCheck') @init('com.jaeksoft.searchlib.web.controller.query.ResultSpellCheckController')">
 	<panel title="Summary"
-		visible="@{resultSpellCheck.resultSpellCheck}" collapsible="true"
+		visible="@load(resultSpellCheck.resultSpellCheck)" collapsible="true"
 		border="normal">
 		<caption>
 			<button label="XML/HTTP API call" target="_blank"
-				href="@{query.requestApiCall}" />
+				href="@load(query.requestApiCall)" />
 		</caption>
 		<panelchildren>
 			<listbox
-				model="@{resultSpellCheck.result.spellCheckList}">
-				<listitem self="@{each='spellCheck'}">
-					<listcell>
-						<separator />
-						<panel title="" collapsible="true">
-							<caption>
-								<hbox width="100%">
-									<label value="Field: " />
-									<label
-										value="@{spellCheck.fieldName}" />
-								</hbox>
-							</caption>
-							<panelchildren>
-								<listbox model="@{spellCheck.list}">
-									<listitem self="@{each=item}">
-										<listcell>
-											<panel title="">
-												<caption>
-													<hbox
-														width="100%">
-														<label
-															value="Query term: " />
-														<label
-															value="@{item.word}" />
-													</hbox>
-												</caption>
-												<panelchildren>
-													<listbox
-														sizedByContent="true" model="@{item.suggestions}">
-														<listhead>
-															<listheader
-																label="Suggested term" />
-															<listheader
-																label="Frequency" />
-														</listhead>
-														<listitem
-															self="@{each=suggestItem}" label="@{suggestItem}">
-															<listcell
-																label="@{suggestItem.term}" />
-															<listcell
-																label="@{suggestItem.freq}" />
-														</listitem>
-													</listbox>
-												</panelchildren>
-											</panel>
-										</listcell>
-									</listitem>
-								</listbox>
-							</panelchildren>
-						</panel>
-					</listcell>
-				</listitem>
+				model="@load(resultSpellCheck.result.spellCheckList)">
+				<template name="model" var="spellCheck">
+					<listitem>
+						<listcell>
+							<separator />
+							<panel title="" collapsible="true">
+								<caption>
+									<hbox width="100%">
+										<label value="Field: " />
+										<label
+											value="@load(spellCheck.fieldName)" />
+									</hbox>
+								</caption>
+								<panelchildren>
+									<listbox
+										model="@load(spellCheck.list)">
+										<template name="model"
+											var="item">
+											<listitem>
+												<listcell>
+													<panel title="">
+														<caption>
+															<hbox
+																width="100%">
+																<label
+																	value="Query term: " />
+																<label
+																	value="@load(item.word)" />
+															</hbox>
+														</caption>
+														<panelchildren>
+															<listbox
+																sizedByContent="true" model="@load(item.suggestions)">
+																<listhead>
+																	<listheader
+																		label="Suggested term" />
+																	<listheader
+																		label="Frequency" />
+																</listhead>
+																<template
+																	name="model" var="suggestItem">
+																	<listitem
+																		label="@load(suggestItem)">
+																		<listcell
+																			label="@load(suggestItem.term)" />
+																		<listcell
+																			label="@load(suggestItem.freq)" />
+																	</listitem>
+																</template>
+															</listbox>
+														</panelchildren>
+													</panel>
+												</listcell>
+											</listitem>
+										</template>
+									</listbox>
+								</panelchildren>
+							</panel>
+						</listcell>
+					</listitem>
+				</template>
 			</listbox>
 		</panelchildren>
 	</panel>
