--- a/WebContent/WEB-INF/zul/query/search/faceted.zul
+++ b/WebContent/WEB-INF/zul/query/search/faceted.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,10 +14,9 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="facet"
-	use="com.jaeksoft.searchlib.web.controller.query.FacetController">
-	<grid model="@{facet.request.facetFieldList.list}"
-		rowRenderer="@{facet.facetFieldRenderer}">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('facet') @init('com.jaeksoft.searchlib.web.controller.query.FacetController')">
+	<grid model="@load(facet.request.facetFieldList.list)">
 		<columns>
 			<column label="Field" />
 			<column label="Multivalued" />
@@ -25,15 +24,41 @@
 			<column label="Minimal count" />
 			<column label="Action" />
 		</columns>
-		<foot visible="@{facet.fieldLeft}">
+		<rows>
+			<template name="model" var="facetField">
+				<row>
+					<listbox mold="select"
+						model="@load(facet.multivaluedValues)"
+						selectedItem="@bind(facetField.multivalued)">
+						<template name="model">
+							<listitem label="load(each)" />
+						</template>
+					</listbox>
+					<listbox mold="select"
+						model="@load(facet.collapsingValues)"
+						selectedItem="@bind(facetField.postCollapsing)">
+						<template name="model">
+							<listitem label="load(each)" />
+						</template>
+					</listbox>
+					<intbox constraint="no empty, no negative"
+						value="@bind(facetField.minCount)" />
+					<button label="remove"
+						onClick="@command('onFacetRemove', facetField=facetField)" />
+				</row>
+			</template>
+		</rows>
+		<foot visible="@load(facet.fieldLeft)">
 			<footer span="4">
 				<listbox mold="select"
-					selectedItem="@{facet.selectedFacet}"
-					model="@{facet.facetFieldLeft}">
-					<listitem self="@{each=facetField}"
-						label="@{facetField}" />
+					selectedItem="@bind(facet.selectedFacet)"
+					model="@load(facet.facetFieldLeft)">
+					<template name="model" var="facetField">
+						<listitem label="@load(facetField)" />
+					</template>
 				</listbox>
-				<button label="add facet" forward="onFacetAdd" />
+				<button label="add facet"
+					onClick="@command('onFacetAdd')" />
 			</footer>
 		</foot>
 	</grid>
