--- a/WebContent/WEB-INF/zul/query/search/filters.zul
+++ b/WebContent/WEB-INF/zul/query/search/filters.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,11 +14,10 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="filters"
-	use="com.jaeksoft.searchlib.web.controller.query.FiltersController">
-	<listbox id="filterListbox"
-		model="@{filters.request.filterList.toArray}"
-		selectedItem="@{filters.selected}">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('filters') @init('com.jaeksoft.searchlib.web.controller.query.FiltersController')">
+	<listbox model="@load(filters.request.filterList.array) "
+		selectedItem="@bind(filters.selected)">
 		<listhead>
 			<listheader label="#" hflex="min" />
 			<listheader label="Description" />
@@ -30,81 +29,39 @@
 			<auxheader>
 				<hbox align="center">
 					<listbox mold="select"
-						model="@{filters.filterTypeList}"
-						selectedItem="@{filters.filterType}" />
-					<grid visible="@{filters.current.queryFilter}">
-						<columns>
-							<column label="Query" hflex="min" />
-						</columns>
-						<rows>
-							<row>
-								<textbox
-									value="@{filters.current.queryString}" cols="50"
-									multiline="true" rows="2" />
-							</row>
-						</rows>
-					</grid>
-					<grid visible="@{filters.current.geoFilter}">
-						<columns>
-							<column label="Type" hflex="min" />
-							<column label="Distance unit" hflex="min" />
-							<column label="Distance" hflex="min" />
-							<column label="Latitude field" hflex="min" />
-							<column label="Longtude field" hflex="min" />
-							<column label="Latitude (lat)" hflex="min" />
-							<column label="Longitude (lon)" hflex="min" />
-							<column label="Location unit" hflex="min" />
-						</columns>
-						<rows>
-							<row>
-								<listbox mold="select"
-									model="@{filters.geoTypes}"
-									selectedItem="@{filters.current.type}" />
-								<listbox mold="select"
-									model="@{filters.geoUnits}"
-									selectedItem="@{filters.current.unit}" />
-								<textbox constraint="/[0-9,.]*/"
-									value="@{filters.current.distance}" />
-								<listbox mold="select"
-									model="@{filters.indexedFieldList}"
-									selectedItem="@{filters.current.latitudeField}" />
-								<listbox mold="select"
-									model="@{filters.indexedFieldList}"
-									selectedItem="@{filters.current.longitudeField}" />
-								<textbox constraint="/[0-9,.]*/"
-									value="@{filters.current.latitude}" />
-								<textbox constraint="/[0-9,.]*/"
-									value="@{filters.current.longitude}" />
-								<listbox mold="select"
-									model="@{filters.geoCoordUnits}"
-									selectedItem="@{filters.current.coordUnit}" />
-							</row>
-						</rows>
-					</grid>
+						model="@load(filters.filterTypeList)"
+						selectedItem="@bind(filters.filterType)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
+					<include src="@load(filters.currentTemplate)" />
 				</hbox>
 			</auxheader>
 			<auxheader>
-				<checkbox checked="@{filters.current.negative}" />
+				<checkbox checked="@bind(filters.current.negative)" />
 			</auxheader>
 			<auxheader>
 				<vbox>
-					<button label="Add" forward="onSave"
-						visible="@{filters.notSelected}" />
-					<button label="Save" forward="onSave"
-						visible="@{filters.selected}" />
-					<button label="Cancel" forward="onCancel"
-						visible="@{filters.selected}" />
+					<button label="Add" onClick="@command('onSave')"
+						visible="@load(filters.notSelection)" />
+					<button label="Save" onClick="@command('onSave')"
+						visible="@load(filters.selection)" />
+					<button label="Cancel"
+						onClick="@command('onCancel')" visible="@load(filters.selection)" />
 				</vbox>
 			</auxheader>
 		</auxhead>
-		<listitem self="@{each=filter}">
-			<custom-attributes filterItem="@{filter}" />
-			<listcell label="@{filter.paramPosition}" />
-			<listcell label="@{filter.description}" />
-			<listcell label="@{filter.negative}" />
-			<listcell>
-				<button label="Remove" onClick="filters.onRemove(self)" />
-			</listcell>
-		</listitem>
+		<template name="model" var="filter">
+			<listitem>
+				<listcell label="@load(filter.paramPosition)" />
+				<listcell label="@load(filter.description)" />
+				<listcell label="@load(filter.negative)" />
+				<listcell>
+					<button label="Remove"
+						onClick="@command('onRemove', filter=filter)" />
+				</listcell>
+			</listitem>
+		</template>
 	</listbox>
 </window>
