--- a/WebContent/WEB-INF/zul/query/search/sorted.zul
+++ b/WebContent/WEB-INF/zul/query/search/sorted.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,24 +14,39 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="sorted"
-	use="com.jaeksoft.searchlib.web.controller.query.SortedController">
-	<grid model="@{sorted.request.sortFieldList.list}"
-		rowRenderer="@{sorted}">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('sorted') @init('com.jaeksoft.searchlib.web.controller.query.SortedController')">
+	<grid model="@load(sorted.request.sortFieldList.list)">
 		<columns>
 			<column label="Field" />
 			<column label="Direction" />
 			<column label="Action" />
 		</columns>
-		<foot visible="@{sorted.fieldLeft}">
+		<rows>
+			<template name="model" var="sortfield">
+				<row>
+					<label value="@load(sortfield.name)" />
+					<listbox mold="select"
+						selectedItem="@bind(sortfield.direction)">
+						<listitem label="ascending" value="ascending" />
+						<listitem label="descending" value="descending" />
+					</listbox>
+					<button label="Remove"
+						onClick="@command('onSortRemove')" />
+				</row>
+			</template>
+		</rows>
+		<foot visible="@load(sorted.fieldLeft)">
 			<footer span="2">
 				<listbox mold="select"
-					selectedItem="@{sorted.selectedSort}"
-					model="@{sorted.sortFieldLeft}">
-					<listitem self="@{each=sortField}"
-						label="@{sortField}" />
+					selectedItem="@bind(sorted.selectedSort)"
+					model="@load(sorted.sortFieldLeft)">
+					<template name="model" var="sortField">
+						<listitem label="@load(sortField)" />
+					</template>
 				</listbox>
-				<button label="add sort field" forward="onSortAdd" />
+				<button label="add sort field"
+					onClick="@command('onSortAdd')" />
 			</footer>
 		</foot>
 	</grid>
