--- a/WebContent/WEB-INF/zul/query/search/join.zul
+++ b/WebContent/WEB-INF/zul/query/search/join.zul
@@ -14,84 +14,107 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="joins"
-	use="com.jaeksoft.searchlib.web.controller.query.JoinController">
-	<listbox id="joinListbox" model="@{joins.request.joinList.toArray}"
-		selectedItem="@{joins.selected}">
-		<listhead>
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('joins') @init('com.jaeksoft.searchlib.web.controller.query.JoinController')">
+	<listbox model="@load(joins.request.joinList.array)"
+		selectedItem="@bind(joins.selected)">
+		<listhead sizable="true">
 			<listheader label="#" hflex="min" />
 			<listheader label="Index" hflex="min">
 				<vbox>
-					<listbox selectedItem="@{joins.currentIndexName}"
-						mold="select" model="@{joins.indexList}" />
+					<listbox
+						selectedItem="@bind(joins.currentIndexName)" mold="select"
+						model="@load(joins.indexList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Query template" hflex="min">
 				<vbox>
 					<listbox
-						selectedItem="@{joins.current.queryTemplate}" mold="select"
-						model="@{joins.queryList}" />
+						selectedItem="@bind(joins.current.queryTemplate)" mold="select"
+						model="@load(joins.queryList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Query string" hflex="min">
 				<vbox>
-					<textbox value="@{joins.current.queryString}"
+					<textbox value="@bind(joins.current.queryString)"
 						cols="20" />
 				</vbox>
 			</listheader>
 			<listheader label="Local field" hflex="min">
 				<vbox>
-					<listbox selectedItem="@{joins.current.localField}"
-						mold="select" model="@{joins.localFieldList}" />
+					<listbox
+						selectedItem="@bind(joins.current.localField)" mold="select"
+						model="@load(joins.localFieldList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Foreign field" hflex="min">
 				<vbox>
 					<listbox
-						selectedItem="@{joins.current.foreignField}" mold="select"
-						model="@{joins.foreignFieldList}" />
+						selectedItem="@bind(joins.current.foreignField)" mold="select"
+						model="@load(joins.foreignFieldList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Return fields" hflex="min">
 				<vbox>
-					<checkbox checked="@{joins.current.returnFields}" />
+					<checkbox
+						checked="@bind(joins.current.returnFields)" />
 				</vbox>
 			</listheader>
 			<listheader label="Return scores" hflex="min">
 				<vbox>
-					<checkbox checked="@{joins.current.returnScores}" />
+					<checkbox
+						checked="@bind(joins.current.returnScores)" />
 				</vbox>
 			</listheader>
 			<listheader label="Return facets" hflex="min">
 				<vbox>
-					<checkbox checked="@{joins.current.returnFacets}" />
+					<checkbox
+						checked="@bind(joins.current.returnFacets)" />
 				</vbox>
 			</listheader>
 			<listheader label="Action">
 				<hbox>
-					<button label="Add" forward="onSave"
-						visible="@{joins.notSelected}" />
-					<button label="Save" forward="onSave"
-						visible="@{joins.selected}" />
-					<button label="Cancel" forward="onCancel"
-						visible="@{joins.selected}" />
+					<button label="Add" onClick="@command('onSave')"
+						visible="@load(joins.notSelection)" />
+					<button label="Save" onClick="@command('onSave')"
+						visible="@load(joins.selection)" />
+					<button label="Cancel"
+						onClick="@command('onCancel')" visible="@load(joins.selection)" />
 				</hbox>
 			</listheader>
 		</listhead>
-		<listitem self="@{each=join}">
-			<custom-attributes joinItem="@{join}" />
-			<listcell label="@{join.paramPosition}" />
-			<listcell label="@{join.indexName}" />
-			<listcell label="@{join.queryTemplate}" />
-			<listcell label="@{join.queryString}" />
-			<listcell label="@{join.localField}" />
-			<listcell label="@{join.foreignField}" />
-			<listcell label="@{join.returnFields}" />
-			<listcell label="@{join.returnScores}" />
-			<listcell label="@{join.returnFacets}" />
-			<listcell>
-				<button label="Remove" onClick="joins.onRemove(self)" />
-			</listcell>
-		</listitem>
+		<template name="model" var="join">
+			<listitem>
+				<listcell label="@load(join.paramPosition)" />
+				<listcell label="@load(join.indexName)" />
+				<listcell label="@load(join.queryTemplate)" />
+				<listcell label="@load(join.queryString)" />
+				<listcell label="@load(join.localField)" />
+				<listcell label="@load(join.foreignField)" />
+				<listcell label="@load(join.returnFields)" />
+				<listcell label="@load(join.returnScores)" />
+				<listcell label="@load(join.returnFacets)" />
+				<listcell>
+					<button label="Remove"
+						onClick="@command('onRemove', joinItem=join)" />
+				</listcell>
+			</listitem>
+		</template>
 	</listbox>
 </window>
