--- a/WebContent/WEB-INF/zul/scheduler/edit.zul
+++ b/WebContent/WEB-INF/zul/scheduler/edit.zul
@@ -14,9 +14,10 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="scheduleredit"
-	use="com.jaeksoft.searchlib.web.controller.scheduler.SchedulerEditController">
-	<panel title="@{scheduleredit.currentEditMode}" border="normal">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('scheduleredit') @init('com.jaeksoft.searchlib.web.controller.scheduler.SchedulerEditController')">
+	<panel title="@load(scheduleredit.currentEditMode)"
+		border="normal">
 		<panelchildren>
 			<grid>
 				<columns sizable="false">
@@ -27,13 +28,13 @@
 					<row>
 						<label value="Job name: " />
 						<textbox
-							value="@{scheduleredit.currentJob.name}"
-							readonly="@{scheduleredit.jobItemSelected}" cols="50" />
+							value="@bind(scheduleredit.currentJob.name)"
+							readonly="@load(scheduleredit.jobItemSelected)" cols="50" />
 					</row>
 					<row>
 						<label value="Active: " />
 						<checkbox label="enabled"
-							checked="@{scheduleredit.currentJob.active}" />
+							checked="@bind(scheduleredit.currentJob.active)" />
 					</row>
 					<row>
 						<vbox>
@@ -55,21 +56,25 @@
 							<rows>
 								<row>
 									<textbox
-										value="@{scheduleredit.currentJob.cron.seconds}" width="95%" />
-									<textbox
-										value="@{scheduleredit.currentJob.cron.minutes}" width="95%" />
-									<textbox
-										value="@{scheduleredit.currentJob.cron.hours}" width="95%" />
-									<textbox
-										value="@{scheduleredit.currentJob.cron.dayOfMonth}"
+										value="@bind(scheduleredit.currentJob.cron.seconds)"
 										width="95%" />
 									<textbox
-										value="@{scheduleredit.currentJob.cron.month}" width="95%" />
-									<textbox
-										value="@{scheduleredit.currentJob.cron.dayOfWeek}"
+										value="@bind(scheduleredit.currentJob.cron.minutes)"
 										width="95%" />
 									<textbox
-										value="@{scheduleredit.currentJob.cron.year}" width="95%" />
+										value="@bind(scheduleredit.currentJob.cron.hours)"
+										width="95%" />
+									<textbox
+										value="@bind(scheduleredit.currentJob.cron.dayOfMonth)"
+										width="95%" />
+									<textbox
+										value="@bind(scheduleredit.currentJob.cron.month)"
+										width="95%" />
+									<textbox
+										value="@bind(scheduleredit.currentJob.cron.dayOfWeek)"
+										width="95%" />
+									<textbox
+										value="@bind(scheduleredit.currentJob.cron.year)" width="95%" />
 								</row>
 							</rows>
 						</grid>
@@ -77,58 +82,61 @@
 					<row>
 						<label value="Tasks " />
 						<listbox
-							model="@{scheduleredit.currentJob.tasks}"
-							selectedItem="@{scheduleredit.selectedJobTask}">
+							model="@load(scheduleredit.currentJob.tasks)"
+							selectedItem="@bind(scheduleredit.selectedJobTask)">
 							<listhead>
 								<listheader label="Task" hflex="min"
 									valign="top">
 									<vbox>
 										<listbox
-											visible="@{scheduleredit.notSelectedJobTask}"
-											model="@{scheduleredit.taskEnum}" mold="select"
-											selectedItem="@{scheduleredit.selectedTask}" />
+											visible="@load(scheduleredit.notSelectedJobTask)"
+											model="@load(scheduleredit.taskEnum)" mold="select"
+											selectedItem="@bind(scheduleredit.selectedTask)" />
 										<label
-											visible="@{scheduleredit.selectedJobTask}"
-											value="@{scheduleredit.currentTask.task.name}" />
+											visible="@load(scheduleredit.selectedJobTask)"
+											value="@load(scheduleredit.currentTask.task.name)" />
 									</vbox>
 								</listheader>
 								<listheader label="Properties"
 									valign="top">
 									<vbox width="100%">
 										<grid
-											visible="@{scheduleredit.currentTask.task.property}"
-											model="@{scheduleredit.currentTask.properties}">
+											visible="@load(scheduleredit.currentTask.task.property)"
+											model="@load(scheduleredit.currentTask.properties)">
 											<columns>
 												<column hflex="min"
 													align="right" />
 												<column />
 											</columns>
 											<rows>
-												<row
-													self="@{each='property'}">
-													<label
-														value="@{property.name}" />
-													<hbox>
-														<combobox
-															visible="@{property.type.ctrlComboBox}"
-															cols="@{property.def.cols}" model="@{property.valueList}"
-															value="@{property.value}"
-															selectedItem="@{property.value}" />
-														<textbox
-															cols="@{property.def.cols}"
-															visible="@{property.type.ctrlTextBox}"
-															value="@{property.value}" />
-														<textbox
-															cols="@{property.def.cols}" rows="@{property.def.rows}"
-															multiline="true"
-															visible="@{property.type.ctrlMultilineTextBox}"
-															value="@{property.value}" />
-														<textbox
-															type="password" cols="@{property.def.cols}"
-															visible="@{property.type.ctrlPassword}"
-															value="@{property.value}" />
-													</hbox>
-												</row>
+												<template name="model"
+													var="property">
+													<row>
+														<label
+															value="@load(property.name)" />
+														<hbox>
+															<combobox
+																visible="@load(property.type.ctrlComboBox)"
+																cols="@load(property.def.cols)"
+																model="@load(property.valueList)"
+																value="@bind(property.value)"
+																selectedItem="@bind(property.value)" />
+															<textbox
+																cols="@load(property.def.cols)"
+																visible="@load(property.type.ctrlTextBox)"
+																value="@bind(property.value)" />
+															<textbox
+																cols="@load(property.def.cols)"
+																rows="@load(property.def.rows)" multiline="true"
+																visible="@load(property.type.ctrlMultilineTextBox)"
+																value="@bind(property.value)" />
+															<textbox
+																type="password" cols="@load(property.def.cols)"
+																visible="@load(property.type.ctrlPassword)"
+																value="@bind(property.value)" />
+														</hbox>
+													</row>
+												</template>
 											</rows>
 										</grid>
 									</vbox>
@@ -136,66 +144,70 @@
 								<listheader align="center" hflex="min"
 									label="action" valign="top">
 									<vbox
-										visible="@{scheduleredit.notSelectedJobTask}">
+										visible="@load(scheduleredit.notSelectionJobTask)">
 										<button tooltiptext="Add a task"
-											image="/images/action_add.png" forward="onTaskAdd" />
+											image="/images/action_add.png"
+											onClick="@command('onTaskAdd')" />
 									</vbox>
 									<vbox
-										visible="@{scheduleredit.selectedJobTask}">
+										visible="@load(scheduleredit.selectionJobTask)">
 										<button label="Save"
-											forward="onTaskSave" />
+											onClick="@command('onTaskSave')" />
 										<button label="Cancel"
-											forward="onTaskCancel" />
+											onClick="@command('onTaskCancel')" />
 									</vbox>
 								</listheader>
 							</listhead>
-							<listitem self="@{each='taskItem'}">
-								<listcell>
-									<label
-										value="@{taskItem.task.name}" />
-								</listcell>
-								<listcell>
-									<listbox
-										visible="@{taskItem.task.property}"
-										model="@{taskItem.properties}">
-										<listhead>
-											<listheader align="right"
-												width="150px" />
-											<listheader />
-										</listhead>
-										<listitem
-											self="@{each='property2'}">
-											<listcell>
-												<label
-													value="@{property2.name}" />
-												<label value=": " />
-											</listcell>
-											<listcell>
-												<label
-													multiline="@{property2.type.ctrlMultilineTextBox}"
-													visible="@{property2.type.ctrlNotPassword}"
-													value="@{property2.previewValue}" />
-											</listcell>
-										</listitem>
-									</listbox>
-								</listcell>
-								<listcell>
-									<custom-attributes
-										taskitem="@{taskItem}" />
-									<button
-										tooltiptext="Move the task up" image="/images/arrow_top.png"
-										onClick="scheduleredit.onTaskUp(self)" />
-									<button
-										tooltiptext="Move the task down"
-										image="/images/arrow_down.png"
-										onClick="scheduleredit.onTaskDown(self)" />
-									<space />
-									<button
-										tooltiptext="Remove the task"
-										image="/images/action_delete.png"
-										onClick="scheduleredit.onTaskRemove(self)" />
-								</listcell>
-							</listitem>
+							<template name="model" var="taskItem">
+								<listitem>
+									<listcell>
+										<label
+											value="@load(taskItem.task.name)" />
+									</listcell>
+									<listcell>
+										<listbox
+											visible="@load(taskItem.task.property)"
+											model="@load(taskItem.properties)">
+											<listhead>
+												<listheader
+													align="right" width="150px" />
+												<listheader />
+											</listhead>
+											<template name="model"
+												var="property2">
+												<listitem>
+													<listcell>
+														<label
+															value="@load(property2.name)" />
+														<label
+															value=": " />
+													</listcell>
+													<listcell>
+														<label
+															multiline="@load(property2.type.ctrlMultilineTextBox)"
+															visible="@load(property2.type.ctrlNotPassword)"
+															value="@load(property2.previewValue)" />
+													</listcell>
+												</listitem>
+											</template>
+										</listbox>
+									</listcell>
+									<listcell>
+										<button
+											tooltiptext="Move the task up" image="/images/arrow_top.png"
+											onClick="@command('onTaskUp', taskitem=taskItem)" />
+										<button
+											tooltiptext="Move the task down"
+											image="/images/arrow_down.png"
+											onClick="@command('onTaskDown', taskitem=taskItem)" />
+										<space />
+										<button
+											tooltiptext="Remove the task"
+											image="/images/action_delete.png"
+											onClick="@command('onTaskRemove', taskitem=taskItem)" />
+									</listcell>
+								</listitem>
+							</template>
 						</listbox>
 						<label value="Task list" />
 					</row>
@@ -204,21 +216,23 @@
 					<footer span="3">
 						<vbox width="100%" align="center">
 							<hbox
-								visible="@{scheduleredit.jobItemSelected}">
+								visible="@load(scheduleredit.jobItemSelected)">
 								<button label="Cancel"
-									forward="onCancel" />
+									onClick="@command('onCancel')" />
 								<space width="10px" />
-								<button label="Save" forward="onSave" />
+								<button label="Save"
+									onClick="@command('onSave')" />
 								<space width="30px" />
 								<button label="Delete"
-									forward="onDelete" />
+									onClick="@command('onDelete')" />
 							</hbox>
 							<hbox
-								visible="@{scheduleredit.noJobItemSelected}">
+								visible="@load(scheduleredit.noJobItemSelected)">
 								<button label="Cancel"
-									forward="onCancel" />
+									onClick="@command('onCancel')" />
 								<space width="10px" />
-								<button label="Create" forward="onSave" />
+								<button label="Create"
+									onClick="@command('onSave')" />
 							</hbox>
 						</vbox>
 					</footer>
